--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -58,7 +58,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_DatumPoint.svg&amp;filetimestamp=20250110092559&amp;.html" class="mw-file-description"><img src="../File/Part_DatumPoint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_DatumPoint.html" title="Part DatumPoint">Referen&#269;n&iacute; bod</a>: Vytvo&#345;&iacute; objekt referen&#269;n&iacute;ho bodu, kter&yacute; lze p&#345;ipojit k jin&yacute;m objekt&#367;m. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_Group.svg&amp;filetimestamp=20240528082502&amp;.html" class="mw-file-description"><img src="../File/Std_Group.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Group.html" title="Std Group">Nov&aacute; skupina</a>: Vytvo&#345;&iacute; novou skupinu.</li></ul>
 <ul><li><span id="Std_LinkActions"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Std_LinkMake.svg&amp;filetimestamp=20190903071604&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMake.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Akce odkazu:</span></li></ul>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMake.svg&amp;filetimestamp=20190903071604&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMake.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkMake.html" title="Std LinkMake">Make Link</a>: Creates a link.</li></ul></dd></dl>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMake.svg&amp;filetimestamp=20190903071604&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMake.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkMake.html" title="Std LinkMake">Vytvo&#345;it odkaz</a>: Vytvo&#345;&iacute; odkaz.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMakeRelative.svg&amp;filetimestamp=20200618144432&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMakeRelative.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkMakeRelative.html" title="Std LinkMakeRelative">Make Sub-Link</a>: Creates a sub-object or sub-element link.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkReplace.svg&amp;filetimestamp=20200618144452&amp;.html" class="mw-file-description"><img src="../File/Std_LinkReplace.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkReplace.html" title="Std LinkReplace">Replace With Link</a>: Replaces object(s) with new link(s).</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkUnlink.svg&amp;filetimestamp=20200618144514&amp;.html" class="mw-file-description"><img src="../File/Std_LinkUnlink.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkUnlink.html" title="Std LinkUnlink">Unlink</a>: Replaces link(s) with their linked object(s).</li></ul></dd></dl>
@@ -147,12 +147,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118093004
+Cached time: 20260118093033
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.174 seconds
-Real time usage: 0.260 seconds
+CPU time usage: 0.144 seconds
+Real time usage: 0.265 seconds
 Preprocessor visited node count: 548/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
@@ -163,18 +163,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.629      1 -total
- 40.23%   14.736      1 Template:Std_Base_navi/cs
- 25.41%    9.308      2 Template:Navigation_menu_2
- 23.96%    8.776      1 Template:Userdocnavi/cs
-  8.03%    2.942      2 Template:Docnav
-  7.63%    2.793      1 Template:StdMenu
-  6.33%    2.319      8 Template:Version
-  5.38%    1.970      1 Template:TOCright
-  4.19%    1.534      6 Template:VersionPlus
+100.00%   35.864      1 -total
+ 36.84%   13.211      1 Template:Std_Base_navi/cs
+ 23.39%    8.389      2 Template:Navigation_menu_2
+ 19.24%    6.901      1 Template:Userdocnavi/cs
+ 11.27%    4.041      2 Template:Docnav
+  8.08%    2.899      6 Template:VersionPlus
+  7.85%    2.814      1 Template:TOCright
+  7.08%    2.538      1 Template:StdMenu
+  5.52%    1.978      8 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118093003 and revision id 1740001. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118093032 and revision id 1740005. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
