--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -60,7 +60,7 @@
 <ul><li><span id="Std_LinkActions"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Std_LinkMake.svg&amp;filetimestamp=20190903071604&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMake.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Akce odkazu:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMake.svg&amp;filetimestamp=20190903071604&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMake.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkMake.html" title="Std LinkMake">Vytvo&#345;it odkaz</a>: Vytvo&#345;&iacute; odkaz.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMakeRelative.svg&amp;filetimestamp=20200618144432&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMakeRelative.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkMakeRelative.html" title="Std LinkMakeRelative">Vytvo&#345;it pododkaz</a>: Vytvo&#345;&iacute; odkaz na podobjekt nebo podprvek.</li></ul></dd></dl>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkReplace.svg&amp;filetimestamp=20200618144452&amp;.html" class="mw-file-description"><img src="../File/Std_LinkReplace.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkReplace.html" title="Std LinkReplace">Replace With Link</a>: Replaces object(s) with new link(s).</li></ul></dd></dl>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkReplace.svg&amp;filetimestamp=20200618144452&amp;.html" class="mw-file-description"><img src="../File/Std_LinkReplace.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkReplace.html" title="Std LinkReplace">Nahradit za odkaz</a>: Nahrad&iacute; objekt(y) nov&yacute;m odkazem (odkazy).</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkUnlink.svg&amp;filetimestamp=20200618144514&amp;.html" class="mw-file-description"><img src="../File/Std_LinkUnlink.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkUnlink.html" title="Std LinkUnlink">Unlink</a>: Replaces link(s) with their linked object(s).</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkImport.svg&amp;filetimestamp=20200618144354&amp;.html" class="mw-file-description"><img src="../File/Std_LinkImport.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkImport.html" title="Std LinkImport">Import Link</a>: Imports selected external link(s).</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkImportAll.svg&amp;filetimestamp=20200618144411&amp;.html" class="mw-file-description"><img src="../File/Std_LinkImportAll.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkImportAll.html" title="Std LinkImportAll">Import All Links</a>: Imports all external link(s).</li></ul></dd></dl>
@@ -147,12 +147,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118093119
+Cached time: 20260118093211
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.153 seconds
-Real time usage: 0.528 seconds
+CPU time usage: 0.166 seconds
+Real time usage: 0.315 seconds
 Preprocessor visited node count: 548/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
@@ -163,18 +163,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  128.557      1 -total
- 71.16%   91.476      1 Template:Std_Base_navi/cs
- 57.16%   73.488      2 Template:Navigation_menu_2
- 12.80%   16.450      1 Template:Userdocnavi/cs
-  3.16%    4.058      2 Template:Docnav
-  2.66%    3.423      8 Template:Version
-  2.44%    3.142      6 Template:VersionPlus
-  2.39%    3.071      1 Template:StdMenu
-  1.93%    2.478      1 Template:TOCright
+100.00%   41.175      1 -total
+ 37.94%   15.620      1 Template:Std_Base_navi/cs
+ 25.01%   10.296      2 Template:Navigation_menu_2
+ 24.34%   10.022      1 Template:Userdocnavi/cs
+  8.08%    3.326      2 Template:Docnav
+  7.14%    2.940      6 Template:VersionPlus
+  6.34%    2.610      1 Template:StdMenu
+  6.22%    2.560      8 Template:Version
+  4.85%    1.999      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118093119 and revision id 1740009. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118093210 and revision id 1740013. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
