--- a/wiki/fr/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/fr/Macro_FCSpring_Helix_Variable.html
@@ -203,8 +203,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3
 <p><span id="Command"></span>
 </p>
 <h4><span class="mw-headline" id="Commandes">Commandes</span></h4>
-<div class="mw-translate-fuzzy">
-<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_02.png&amp;filetimestamp=20160904162206&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_02.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Load</span>&nbsp;: le bouton Lead ouvre une bo&icirc;te de dialogue pour lire un fichier sauvegard&eacute;, le fichier porte l'extension <b>.FCSpring</b>.</li>
+<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_02.png&amp;filetimestamp=20160904162206&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_02.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Load</span>&nbsp;: le bouton Load ouvre une bo&icirc;te de dialogue pour lire un fichier sauvegard&eacute;, le fichier porte l'extension <b>.FCSpring</b>.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_03.png&amp;filetimestamp=20160904162346&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_03.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Save</span>&nbsp;: le bouton Save ouvre une bo&icirc;te de dialogue pour sauver un fichier avec la configuration du ressort modifi&eacute;e ou non, le fichier porte l'extension <b>.FCSpring</b>.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_02b.png&amp;filetimestamp=20160904162239&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_02b.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Load Coordinates</span>&nbsp;: ouvre une bo&icirc;te de dialogue pour charger un fichier <b>.FCSpringCoor</b> (toutes les coordonn&eacute;es des points constituants le ressort).</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_03b.png&amp;filetimestamp=20160904174322&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_03b.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Save Coordinates</span>&nbsp;: ouvre une bo&icirc;te de dialogue pour sauver un fichier <b>.FCSpringCoor</b> (toutes les coordonn&eacute;es des points constituants le ressort).</li>
@@ -212,7 +211,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_05.png&amp;filetimestamp=20160904162655&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_05.png" decoding="async" width="16" height="15" class="mw-file-element" data-file-width="47" data-file-height="45"></a></span> Reset</span>&nbsp;: r&eacute;initialise la macro &agrave; la configuration par d&eacute;faut.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_06.png&amp;filetimestamp=20160904162729&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_06.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Launch</span>&nbsp;: lance la macro et cr&eacute;e le ressort dans sa configuration.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Help</span>&nbsp;: ce bouton affiche la page wiki dans la fen&ecirc;tre web de FreeCAD</li></ul>
-</div>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCSpring_Helix_Variable_05.png&amp;filetimestamp=20200419154037&amp;.html" class="mw-file-description"><img src="../File/Macro_FCSpring_Helix_Variable_05.png" decoding="async" width="429" height="134" class="mw-file-element" data-file-width="429" data-file-height="134"></a></span>
 </p>
 <div style="clear:both"></div>
@@ -508,13 +506,13 @@ Bouton pour votre barre d'outils </p><figure class="mw-default-size mw-halign-le
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118093217
+Cached time: 20260118093235
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.254 seconds
-Real time usage: 0.339 seconds
-Preprocessor visited node count: 946/1000000
+CPU time usage: 0.229 seconds
+Real time usage: 0.390 seconds
+Preprocessor visited node count: 945/1000000
 Post&#8208;expand include size: 24277/2097152 bytes
 Template argument size: 4651/2097152 bytes
 Highest expansion depth: 6/100
@@ -524,19 +522,19 @@ Unstrip post&#8208;expand size: 28848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  140.496      1 -total
-  3.67%    5.156      1 Template:Codeextralink
-  3.44%    4.838     12 Template:SpinBox
-  3.07%    4.316      1 Template:Macro/fr
-  2.73%    3.836      2 Template:RadioButton
-  2.41%    3.380      6 Template:Code
-  2.31%    3.239      8 Template:CheckBox
-  1.79%    2.510     14 Template:Clear
-  1.71%    2.400     24 Template:Button
-  1.54%    2.169      1 Template:Caption
+100.00%  175.462      1 -total
+  3.25%    5.697      6 Template:Code
+  3.10%    5.437     12 Template:SpinBox
+  2.99%    5.249      1 Template:Macro/fr
+  2.39%    4.190      2 Template:RadioButton
+  2.29%    4.024      8 Template:CheckBox
+  2.18%    3.817      1 Template:Codeextralink
+  1.75%    3.066     14 Template:Clear
+  1.65%    2.892     24 Template:Button
+  1.32%    2.319      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:56405-0!canonical and timestamp 20260118093216 and revision id 1740015. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:56405-0!canonical and timestamp 20260118093234 and revision id 1740017. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
