--- a/wiki/fr/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/fr/Macro_FCSpring_Helix_Variable.html
@@ -232,12 +232,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3
 </p>
 <h2><span class="mw-headline" id="Exemple_de_vue_rapport">Exemple de vue rapport</span></h2>
 <p>D&egrave;s que la macro est lanc&eacute;e, la liste de la configuration du ressort est affich&eacute;e sous forme de tableau.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Ici les donn&eacute;es du ressort affich&eacute;es dans la vue rapport.
+</p><p>Ici les donn&eacute;es du ressort affich&eacute;es dans la vue rapport.
 <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCSpring_Helix_Variable_08.png&amp;filetimestamp=20141118192724&amp;.html" class="mw-file-description"><img src="../File/Macro_FCSpring_Helix_Variable_08.png" decoding="async" width="948" height="60" class="mw-file-element" data-file-width="948" data-file-height="60"></a></span>
 </p>
-</div>
 <div style="clear:both"></div>
 <p><span id="Icon"></span>
 </p>
@@ -506,13 +503,13 @@ Bouton pour votre barre d'outils </p><figure class="mw-default-size mw-halign-le
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118093235
+Cached time: 20260118093245
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.229 seconds
-Real time usage: 0.390 seconds
-Preprocessor visited node count: 945/1000000
+CPU time usage: 0.256 seconds
+Real time usage: 0.326 seconds
+Preprocessor visited node count: 944/1000000
 Post&#8208;expand include size: 24277/2097152 bytes
 Template argument size: 4651/2097152 bytes
 Highest expansion depth: 6/100
@@ -522,19 +519,19 @@ Unstrip post&#8208;expand size: 28848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  175.462      1 -total
-  3.25%    5.697      6 Template:Code
-  3.10%    5.437     12 Template:SpinBox
-  2.99%    5.249      1 Template:Macro/fr
-  2.39%    4.190      2 Template:RadioButton
-  2.29%    4.024      8 Template:CheckBox
-  2.18%    3.817      1 Template:Codeextralink
-  1.75%    3.066     14 Template:Clear
-  1.65%    2.892     24 Template:Button
-  1.32%    2.319      1 Template:KEY
+100.00%  130.604      1 -total
+  4.57%    5.972     12 Template:SpinBox
+  4.43%    5.784      8 Template:CheckBox
+  3.96%    5.171      6 Template:Code
+  3.16%    4.133      2 Template:RadioButton
+  2.84%    3.712     24 Template:Button
+  2.84%    3.704      1 Template:Macro/fr
+  2.49%    3.251     14 Template:Clear
+  2.24%    2.925      1 Template:Codeextralink
+  1.40%    1.830      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:56405-0!canonical and timestamp 20260118093234 and revision id 1740017. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:56405-0!canonical and timestamp 20260118093245 and revision id 1740019. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
