--- a/wiki/fr/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/fr/Macro_FCSpring_Helix_Variable.html
@@ -250,11 +250,8 @@ Bouton pour votre barre d'outils </p><figure class="mw-default-size mw-halign-le
 <div style="clear:both"></div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p><b>Macro_FCSpring_Helix_Variable.FCMacro</b>
+</p><p>T&eacute;l&eacute;chargez la macro &agrave; partir de Gist <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/68c81c32a0727a693d3a">Macro_FCSpring_Helix_Variable</a>
 </p>
-<div class="mw-translate-fuzzy">
-<p>T&eacute;l&eacute;chargez la macro sur Gist <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/68c81c32a0727a693d3a">Macro_FCSpring_Helix_Variable</a>
-</p>
-</div>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
 <p>Le fichier ci-dessus est une macro sous la forme de code GitHub. T&eacute;l&eacute;chargez le fichier Zip depuis GitHub, puis suivez les instructions d'installation des macros pour d&eacute;butants indiqu&eacute;es &agrave; l'adresse <a rel="nofollow" class="external text" href="https://wiki.opensourceecology.org/wiki/Installing_Macros_in_FreeCAD">installing FreeCAD macros in Ubuntu</a>
 </p><p><span id="Examples"></span>
@@ -503,13 +500,13 @@ Bouton pour votre barre d'outils </p><figure class="mw-default-size mw-halign-le
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118093245
+Cached time: 20260118093303
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.256 seconds
-Real time usage: 0.326 seconds
-Preprocessor visited node count: 944/1000000
+CPU time usage: 0.214 seconds
+Real time usage: 0.281 seconds
+Preprocessor visited node count: 943/1000000
 Post&#8208;expand include size: 24277/2097152 bytes
 Template argument size: 4651/2097152 bytes
 Highest expansion depth: 6/100
@@ -519,19 +516,19 @@ Unstrip post&#8208;expand size: 28848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  130.604      1 -total
-  4.57%    5.972     12 Template:SpinBox
-  4.43%    5.784      8 Template:CheckBox
-  3.96%    5.171      6 Template:Code
-  3.16%    4.133      2 Template:RadioButton
-  2.84%    3.712     24 Template:Button
-  2.84%    3.704      1 Template:Macro/fr
-  2.49%    3.251     14 Template:Clear
-  2.24%    2.925      1 Template:Codeextralink
-  1.40%    1.830      1 Template:Caption
+100.00%   98.499      1 -total
+  6.43%    6.336      1 Template:Macro/fr
+  3.55%    3.499     12 Template:SpinBox
+  3.50%    3.451      6 Template:Code
+  3.00%    2.959      8 Template:CheckBox
+  2.63%    2.594      2 Template:RadioButton
+  2.51%    2.472      1 Template:Caption
+  2.49%    2.456      1 Template:Codeextralink
+  2.26%    2.226     24 Template:Button
+  1.53%    1.504      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:56405-0!canonical and timestamp 20260118093245 and revision id 1740019. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:56405-0!canonical and timestamp 20260118093303 and revision id 1740021. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
