--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -63,7 +63,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkReplace.svg&amp;filetimestamp=20200618144452&amp;.html" class="mw-file-description"><img src="../File/Std_LinkReplace.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkReplace.html" title="Std LinkReplace">Nahradit za odkaz</a>: Nahrad&iacute; objekt(y) nov&yacute;m odkazem (odkazy).</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkUnlink.svg&amp;filetimestamp=20200618144514&amp;.html" class="mw-file-description"><img src="../File/Std_LinkUnlink.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkUnlink.html" title="Std LinkUnlink">Zru&scaron;it propojen&iacute;</a>: N&aacute;hrad&iacute; odkazy jejich propojen&yacute;mi objekty.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkImport.svg&amp;filetimestamp=20200618144354&amp;.html" class="mw-file-description"><img src="../File/Std_LinkImport.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkImport.html" title="Std LinkImport">Importovat odkaz</a>: Importuje vybran&eacute; extern&iacute; odkazy.</li></ul></dd></dl>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkImportAll.svg&amp;filetimestamp=20200618144411&amp;.html" class="mw-file-description"><img src="../File/Std_LinkImportAll.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkImportAll.html" title="Std LinkImportAll">Import All Links</a>: Imports all external link(s).</li></ul></dd></dl>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkImportAll.svg&amp;filetimestamp=20200618144411&amp;.html" class="mw-file-description"><img src="../File/Std_LinkImportAll.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkImportAll.html" title="Std LinkImportAll">Importovat v&scaron;echny odkazy</a>: Importuje v&scaron;echny extern&iacute; odkazy.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_VarSet.svg&amp;filetimestamp=20240705145906&amp;.html" class="mw-file-description"><img src="../File/Std_VarSet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_VarSet.html" title="Std VarSet">Variable Set</a>: Creates a set of properties that can be used as variables in <a href="../Expressions.html" title="Expressions">expressions</a>. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <h3><span class="mw-headline" id="Additional_tools">Additional tools</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMakeGroup.svg&amp;filetimestamp=20240411204129&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMakeGroup.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_LinkMakeGroup&amp;action=edit&amp;redlink=1.html" class="new" title="Std LinkMakeGroup (page does not exist)">Link Group</a>: Creates a group of links.</li></ul>
@@ -147,12 +147,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118093357
+Cached time: 20260118093420
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.132 seconds
-Real time usage: 0.236 seconds
+CPU time usage: 0.150 seconds
+Real time usage: 0.211 seconds
 Preprocessor visited node count: 548/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
@@ -163,18 +163,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.113      1 -total
- 31.22%    9.713      1 Template:Std_Base_navi/cs
- 21.47%    6.680      1 Template:Userdocnavi/cs
- 20.71%    6.442      2 Template:Navigation_menu_2
-  9.77%    3.039      8 Template:Version
-  9.67%    3.009      2 Template:Docnav
-  9.23%    2.873      1 Template:StdMenu
-  6.64%    2.067      1 Template:TOCright
-  6.39%    1.989      6 Template:VersionPlus
+100.00%   31.801      1 -total
+ 37.82%   12.028      1 Template:Std_Base_navi/cs
+ 25.02%    7.956      1 Template:Userdocnavi/cs
+ 24.46%    7.779      2 Template:Navigation_menu_2
+  8.14%    2.587      2 Template:Docnav
+  8.01%    2.548      6 Template:VersionPlus
+  6.14%    1.952      1 Template:TOCright
+  5.29%    1.682      8 Template:Version
+  4.25%    1.351      1 Template:StdMenu
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118093357 and revision id 1740027. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118093420 and revision id 1740029. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
