--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Std_Base.html" class="mw-pt-progress mw-pt-progress--complete" title="Std: Narz&#281;dzia standardowe (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Std_Base.html" class="mw-pt-progress mw-pt-progress--med" title="Base Padr&atilde;o (19% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Std_Base.html" class="mw-pt-progress mw-pt-progress--low" title="Std Base (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Std_Base.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1090;&#1072;&#1085;&#1076;&#1072;&#1088;&#1090;&#1085;&#1099;&#1077; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1099; (94% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../Std_Base/zh-hans.html" class="mw-pt-progress mw-pt-progress--low" title="&#26631;&#20934;&#22522;&#30784; (6% translated)" lang="zh-Hans" dir="ltr">&#20013;&#25991;&#65288;&#31616;&#20307;&#65289;</a></li>
 <li><a href="../ja/Std_Base.html" class="mw-pt-progress mw-pt-progress--low" title="&#20849;&#36890;&#12484;&#12540;&#12523; (6% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -73,7 +73,7 @@
 <dl><dd><ul><li><a href="../Std_Expressions.html#Copy_Selected" title="Std Expressions">Kop&iacute;rovat vybran&eacute;</a>: Kop&iacute;ruje data v&yacute;raz&#367; z vybran&yacute;ch objekt&#367; do schr&aacute;nky.</li></ul></dd></dl>
 <dl><dd><ul><li><a href="../Std_Expressions.html#Copy_Active_Document" title="Std Expressions">Kop&iacute;rovat aktivn&iacute; dokument</a>: Zkop&iacute;ruje data v&yacute;razu z aktivn&iacute;ho dokumentu do schr&aacute;nky.</li></ul></dd></dl>
 <dl><dd><ul><li><a href="../Std_Expressions.html#Copy_All_Documents" title="Std Expressions">Kop&iacute;rovat v&scaron;echny dokumenty</a>: Zkop&iacute;ruje &uacute;daje o v&yacute;razu ze v&scaron;ech dokument&#367; do schr&aacute;nky.</li></ul></dd></dl>
-<dl><dd><ul><li><a href="../Std_Expressions.html#Paste" title="Std Expressions">Paste</a>: Pastes expression data from the Clipboard.</li></ul></dd></dl>
+<dl><dd><ul><li><a href="../Std_Expressions.html#Paste" title="Std Expressions">Vlo&#382;it</a>: Vlo&#382;&iacute; data v&yacute;razu ze schr&aacute;nky.</li></ul></dd></dl>
 <ul><li><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Part_SelectFilter.svg&amp;filetimestamp=20240719123546&amp;.html" class="mw-file-description"><img src="../File/Part_SelectFilter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html" title="Part SelectFilter">Selection Filter</a>: <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Vertex-selection.svg&amp;filetimestamp=20240704201749&amp;.html" class="mw-file-description"><img src="../File/Vertex-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#Vertex_Selection" title="Part SelectFilter">Vertex Selection</a>: Only allows the selection of vertices.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Edge-selection.svg&amp;filetimestamp=20240704192347&amp;.html" class="mw-file-description"><img src="../File/Edge-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#Edge_Selection" title="Part SelectFilter">Edge Selection</a>: Only allows the selection of edges.</li></ul></dd></dl>
@@ -149,34 +149,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118094446
+Cached time: 20260118094512
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.141 seconds
-Real time usage: 0.200 seconds
+CPU time usage: 0.181 seconds
+Real time usage: 0.301 seconds
 Preprocessor visited node count: 549/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2371/5000000 bytes
+Unstrip post&#8208;expand size: 2372/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.142      1 -total
- 47.54%   12.904      1 Template:Std_Base_navi/cs
- 29.96%    8.132      2 Template:Navigation_menu_2
- 16.32%    4.430      1 Template:Userdocnavi/cs
-  8.41%    2.283      2 Template:Docnav
-  7.52%    2.042      6 Template:VersionPlus
-  5.44%    1.475      8 Template:Version
-  5.08%    1.379      1 Template:StdMenu
-  4.79%    1.299      1 Template:TOCright
+100.00%   26.807      1 -total
+ 42.86%   11.489      1 Template:Std_Base_navi/cs
+ 27.37%    7.337      2 Template:Navigation_menu_2
+ 19.99%    5.360      1 Template:Userdocnavi/cs
+  9.01%    2.415      2 Template:Docnav
+  6.11%    1.638      6 Template:VersionPlus
+  5.76%    1.543      8 Template:Version
+  5.72%    1.534      1 Template:StdMenu
+  5.42%    1.454      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118094446 and revision id 1740061. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118094512 and revision id 1740063. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
